# Little_endian_and_Big_endian

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp
.github/workflows/: test.yml
include/: LE_system.hpp
src/: LE_system.cpp  main.cpp
tests/: CMakeLists.txt  test.hpp
